# SSHChic

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build-cmds.txt  go.mod  sshchic.go
.github/workflows/: build-go.yml  build-rust.yml  create-release-tag.yaml  release-artefacts.yaml
docs/: ARCHITECTURE.md  EXAMPLES.md  WORKFLOWS.md
src/: main.rs
