[package]
name = "sshchic"
version = "0.1.0"
edition = "2021"
authors = ["painteau"]
description = "SSHChic is a fast SSH key generator that finds key pairs with public keys with custom patterns"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
regex = "1.10"
ed25519-dalek = "2.1"
base64 = "0.21"
humantime = "2.1"
num_cpus = "1.16"
ctrlc = "3.4"
sha2 = "0.10"
time = "0.3"
colored = "2.1"
humansize = "2.1"